Edit startup apps, fix spacing on user pfp in waybar

--- a/res/waybar/style.css
+++ b/res/waybar/style.css
@@ -32,6 +32,7 @@ window#waybar {
 #idle_inhibitor,
 #custom-notification,
 #custom-weather,
+#custom-blank,
 #custom-cpu-governor,
 #custom-kde-connect,
 #mpris,
